Commit Random Effects Analysis 1.2

--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -16,15 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from scipy import stats\n",
     "\n",
     "import statsmodels.api as sm\n",
-    "from linearmodels import RandomEffects\n",
+    "from linearmodels.panel import RandomEffects\n",
+    "from linearmodels.panel.results import PanelResults, RandomEffectsResults\n",
     "\n",
     "from statsmodels.iolib import load_pickle, save_pickle\n",
     "\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +415,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +847,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -891,8 +893,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.2403\n",
       "Estimator:              RandomEffects   R-squared (Between):              0.2846\n",
       "No. Observations:                1728   R-squared (Within):               0.2318\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.2751\n",
-      "Time:                        16:37:47   Log-likelihood                    1463.6\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.2751\n",
+      "Time:                        01:23:33   Log-likelihood                    1463.6\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      90.746\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -932,11 +934,11 @@
     "endo = sgx[endo_var]\n",
     "exog = sm.add_constant(sgx[exog_vars])\n",
     "\n",
-    "re_mod = RandomEffects(endo, exog)\n",
+    "entity_re_mod = RandomEffects(endo, exog)\n",
     "\n",
-    "re_fit = re_mod.fit()\n",
+    "entity_re_fit = entity_re_mod.fit()\n",
     "\n",
-    "print(re_fit.summary)"
+    "print(entity_re_fit.summary)"
    ]
   },
   {
@@ -948,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -960,8 +962,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3621\n",
       "Estimator:              RandomEffects   R-squared (Between):              0.4626\n",
       "No. Observations:                1728   R-squared (Within):               0.3616\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        16:37:47   Log-likelihood                    282.02\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3621\n",
+      "Time:                        01:23:33   Log-likelihood                    282.02\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                           8   P-value                           0.0000\n",
@@ -1003,11 +1005,11 @@
     "endo = sgx[endo_var]\n",
     "exog = sm.add_constant(sgx[exog_vars])\n",
     "\n",
-    "re_mod = RandomEffects(endo, exog)\n",
+    "time_re_mod = RandomEffects(endo, exog)\n",
     "\n",
-    "re_fit = re_mod.fit()\n",
+    "time_re_fit = time_re_mod.fit()\n",
     "\n",
-    "print(re_fit.summary)"
+    "print(time_re_fit.summary)"
    ]
   },
   {
@@ -1026,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,11 +1168,237 @@
     "entity_panel = sgx['Company Code']\n",
     "time_panel = sgx['Year']\n",
     "\n",
-    "re_mod = TwoWayRandomEffects(endo, exog, entity_panel, time_panel)\n",
+    "tw_re_mod = TwoWayRandomEffects(endo, exog, entity_panel, time_panel)\n",
     "\n",
-    "re_fit = re_mod.fit()\n",
+    "tw_re_fit = tw_re_mod.fit()\n",
     "\n",
-    "print(re_fit.summary())"
+    "print(tw_re_fit.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test for significance of Random Effects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lagrange Multiplier Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cond_LM_stat(restricted_model: PanelResults, how: str): \n",
+    "    T = restricted_model.time_info.total.astype('int')\n",
+    "    n = restricted_model.entity_info.total.astype('int')\n",
+    "\n",
+    "    J_n = np.ones(shape = (n, n))\n",
+    "    J_T = np.ones(shape = (T, T))\n",
+    "\n",
+    "    I_n = np.identity(n = n)\n",
+    "    I_T = np.identity(n = T)\n",
+    "\n",
+    "    u_tilda = restricted_model.resids\n",
+    "    \n",
+    "    if how.lower() == 'entity':\n",
+    "        LM_C_entity = ((n * T) / (2 * (T - 1))) * (1 - ((u_tilda.T @ np.kron(I_n, J_T) @ u_tilda) / (u_tilda.T @ u_tilda))) ** 2\n",
+    "        return LM_C_entity\n",
+    "    elif how.lower() == 'time':\n",
+    "        LM_C_time = ((n * T) / (2 * (n - 1))) * (1 - ((u_tilda.T @ np.kron(J_n, I_T) @ u_tilda) / (u_tilda.T @ u_tilda))) ** 2\n",
+    "        return LM_C_time\n",
+    "    else:\n",
+    "        raise ValueError(f\"'how' parameter should be either 'Entity' or 'Time' and not {how}.\")\n",
+    "    \n",
+    "def marg_LM_stat(restricted_model: RandomEffectsResults, how: str): \n",
+    "    if how.lower() == 'time':    \n",
+    "        T = restricted_model.time_info.total.astype('int')\n",
+    "        n = restricted_model.entity_info.total.astype('int')\n",
+    "    elif how.lower() == 'entity':\n",
+    "        n = restricted_model.time_info.total.astype('int')\n",
+    "        T = restricted_model.entity_info.total.astype('int')\n",
+    "    else:\n",
+    "        raise ValueError(f\"'how' parameter should be either 'Entity' or 'Time' and not {how}.\")\n",
+    "\n",
+    "    J_n = np.ones(shape = (n, n))\n",
+    "    J_T = np.ones(shape = (T, T))\n",
+    "    \n",
+    "    J_n_bar = (1 / n) * J_n\n",
+    "    J_T_bar = (1 / T) * J_T\n",
+    "\n",
+    "    I_n = np.identity(n = n)\n",
+    "    I_T = np.identity(n = T)\n",
+    "\n",
+    "    E_n = I_n - J_n_bar\n",
+    "    E_T = I_T - J_T_bar\n",
+    "\n",
+    "    u_tilda = restricted_model.resids\n",
+    "\n",
+    "    if how.lower() == 'entity':\n",
+    "        sigma_v_sq = (1 / T*(n - 1)) * u_tilda.T @ np.kron(E_n, I_T) @ u_tilda\n",
+    "        sigma_2_sq = (1 / T) * u_tilda.T @ np.kron(J_n_bar, I_T) @ u_tilda\n",
+    "\n",
+    "        Q_1 = (1 / sigma_2_sq) * u_tilda.T @ np.kron(J_n_bar, J_T_bar) @ u_tilda\n",
+    "        Q_2 = (1 / (n - 1)*sigma_v_sq) * u_tilda.T @ np.kron(E_n, J_T_bar) @ u_tilda\n",
+    "\n",
+    "        LM_M_entity = ((np.sqrt(T) * sigma_2_sq * sigma_v_sq) / np.sqrt(2 * (T - 1) * (sigma_v_sq ** 2 + (n - 1) * sigma_2_sq ** 2))) *\\\n",
+    "             ((1/sigma_2_sq) * (Q_1 - 1) + ((n-1) / sigma_v_sq) * (Q_2 - 1))\n",
+    "        \n",
+    "        return LM_M_entity\n",
+    "    \n",
+    "    else:\n",
+    "        sigma_v_sq = (1 / T*(n - 1)) * u_tilda.T @ np.kron(I_n, E_T) @ u_tilda\n",
+    "        sigma_1_sq = (1 / n) * u_tilda.T @ np.kron(I_n, J_T_bar) @ u_tilda\n",
+    "\n",
+    "        R_1 = (1 / sigma_1_sq) * u_tilda.T @ np.kron(J_T_bar, J_n_bar) @ u_tilda\n",
+    "        R_2 = (1 / (T - 1)*sigma_v_sq) * u_tilda.T @ np.kron(J_n_bar, E_T) @ u_tilda\n",
+    "\n",
+    "        LM_M_time = ((np.sqrt(n) * sigma_1_sq * sigma_v_sq) / np.sqrt(2 * (n - 1) * (sigma_v_sq ** 2 + (T - 1) * sigma_1_sq ** 2))) *\\\n",
+    "             ((1/sigma_1_sq) * (R_1 - 1) + ((T-1) / sigma_v_sq) * (R_2 - 1))\n",
+    "        \n",
+    "        return LM_M_time\n",
+    "\n",
+    "def joint_LM_stat(restricted_model: PanelResults|RandomEffectsResults): \n",
+    "    return cond_LM_stat(restricted_model, 'Entity') + cond_LM_stat(restricted_model, 'Time')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Joint LM-Test for Entity Random Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pooled_ols_res = load_pickle('model/pooled_ols.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joint LM Statistic for 2-way Random Effects: 2931.477025018793\n",
+      "p-value of Joint LM test for 2-way Random Effects: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "joint_stat = joint_LM_stat(pooled_ols_res)\n",
+    "\n",
+    "joint_p = stats.chi2.cdf(joint_stat, 1)\n",
+    "\n",
+    "print(f\"Joint LM Statistic for 2-way Random Effects: {joint_stat}\")\n",
+    "print(f\"p-value of Joint LM test for 2-way Random Effects: {joint_p}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conditional LM-Test for Entity Random Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conditional LM Statistic for Entity Random Effects: 2931.4558135603897\n",
+      "p-value of Conditional LM test for Entity Random ffects: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond_entity_stat = cond_LM_stat(pooled_ols_res, how= 'entity')\n",
+    "\n",
+    "cond_entity_p = stats.chi2.cdf(cond_entity_stat, 1)\n",
+    "\n",
+    "print(f\"Conditional LM Statistic for Entity Random Effects: {cond_entity_stat}\")\n",
+    "print(f\"p-value of Conditional LM test for Entity Random ffects: {cond_entity_p}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conditional LM-Test for Time Random Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conditional LM Statistic for Time Random Effects: 0.021211458403447795\n",
+      "p-value of Conditional LM test for Time Random Effects: 0.11579562720183006\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond_time_stat = cond_LM_stat(pooled_ols_res, how= 'time')\n",
+    "\n",
+    "cond_time_p = stats.chi2.cdf(cond_time_stat, 1)\n",
+    "\n",
+    "print(f\"Conditional LM Statistic for Time Random Effects: {cond_time_stat}\")\n",
+    "print(f\"p-value of Conditional LM test for Time Random Effects: {cond_time_p}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Marginal LM-Test for Entity Random Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'how' parameter should be either 'Entity' or 'Time' and not entity.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m marg_entity_stat \u001b[38;5;241m=\u001b[39m marg_LM_stat(pooled_ols_res, how\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentity\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m marg_entity_p \u001b[38;5;241m=\u001b[39m stats\u001b[38;5;241m.\u001b[39mchi2\u001b[38;5;241m.\u001b[39mcdf(marg_entity_stat, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMarginal LM Statistic for Entity Random Effects: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmarg_entity_stat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[12], line 30\u001b[0m, in \u001b[0;36mmarg_LM_stat\u001b[1;34m(restricted_model, how)\u001b[0m\n\u001b[0;32m     28\u001b[0m     T \u001b[38;5;241m=\u001b[39m restricted_model\u001b[38;5;241m.\u001b[39mentity_info\u001b[38;5;241m.\u001b[39mtotal\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhow\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m parameter should be either \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEntity\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m and not \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhow\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m J_n \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(shape \u001b[38;5;241m=\u001b[39m (n, n))\n\u001b[0;32m     33\u001b[0m J_T \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(shape \u001b[38;5;241m=\u001b[39m (T, T))\n",
+      "\u001b[1;31mValueError\u001b[0m: 'how' parameter should be either 'Entity' or 'Time' and not entity."
+     ]
+    }
+   ],
+   "source": [
+    "marg_entity_stat = marg_LM_stat(pooled_ols_res, how= 'entity')\n",
+    "\n",
+    "marg_entity_p = stats.chi2.cdf(marg_entity_stat, 1)\n",
+    "\n",
+    "print(f\"Marginal LM Statistic for Entity Random Effects: {marg_entity_stat}\")\n",
+    "print(f\"p-value of Marginal LM test for Entity Random ffects: {marg_entity_p}\")"
    ]
   },
   {
