Commit random effects analysis 1.3

--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "\n",
     "import statsmodels.api as sm\n",
     "from linearmodels.panel import RandomEffects\n",
-    "from linearmodels.panel.results import PanelResults, RandomEffectsResults\n",
+    "from linearmodels.panel.results import PanelResults, RandomEffectsResults, PanelEffectsResults\n",
     "\n",
     "from statsmodels.iolib import load_pickle, save_pickle\n",
     "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.2846\n",
       "No. Observations:                1728   R-squared (Within):               0.2318\n",
       "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.2751\n",
-      "Time:                        01:23:33   Log-likelihood                    1463.6\n",
+      "Time:                        22:56:45   Log-likelihood                    1463.6\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      90.746\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.4626\n",
       "No. Observations:                1728   R-squared (Within):               0.3616\n",
       "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        01:23:33   Log-likelihood                    282.02\n",
+      "Time:                        22:56:45   Log-likelihood                    282.02\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                           8   P-value                           0.0000\n",
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
       "Model:                            GLS   Adj. R-squared:                  0.230\n",
       "Method:                 Least Squares   F-statistic:                     87.09\n",
       "Date:                Sun, 31 Mar 2024   Prob (F-statistic):           1.66e-95\n",
-      "Time:                        00:34:29   Log-Likelihood:                 1128.2\n",
+      "Time:                        22:56:46   Log-Likelihood:                 1128.2\n",
       "No. Observations:                1728   AIC:                            -2242.\n",
       "Df Residuals:                    1721   BIC:                            -2204.\n",
       "Df Model:                           6                                         \n",
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1264,7 @@
     "        \n",
     "        return LM_M_time\n",
     "\n",
-    "def joint_LM_stat(restricted_model: PanelResults|RandomEffectsResults): \n",
+    "def joint_LM_stat(restricted_model: PanelResults): \n",
     "    return cond_LM_stat(restricted_model, 'Entity') + cond_LM_stat(restricted_model, 'Time')"
    ]
   },
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1294,14 +1294,14 @@
      "output_type": "stream",
      "text": [
       "Joint LM Statistic for 2-way Random Effects: 2931.477025018793\n",
-      "p-value of Joint LM test for 2-way Random Effects: 1.0\n"
+      "p-value of Joint LM test for 2-way Random Effects: 0.0\n"
      ]
     }
    ],
    "source": [
     "joint_stat = joint_LM_stat(pooled_ols_res)\n",
     "\n",
-    "joint_p = stats.chi2.cdf(joint_stat, 1)\n",
+    "joint_p = 1 - stats.chi2.cdf(joint_stat, 1)\n",
     "\n",
     "print(f\"Joint LM Statistic for 2-way Random Effects: {joint_stat}\")\n",
     "print(f\"p-value of Joint LM test for 2-way Random Effects: {joint_p}\")\n"
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1324,14 +1324,14 @@
      "output_type": "stream",
      "text": [
       "Conditional LM Statistic for Entity Random Effects: 2931.4558135603897\n",
-      "p-value of Conditional LM test for Entity Random ffects: 1.0\n"
+      "p-value of Conditional LM test for Entity Random ffects: 0.0\n"
      ]
     }
    ],
    "source": [
     "cond_entity_stat = cond_LM_stat(pooled_ols_res, how= 'entity')\n",
     "\n",
-    "cond_entity_p = stats.chi2.cdf(cond_entity_stat, 1)\n",
+    "cond_entity_p = 1 - stats.chi2.cdf(cond_entity_stat, 1)\n",
     "\n",
     "print(f\"Conditional LM Statistic for Entity Random Effects: {cond_entity_stat}\")\n",
     "print(f\"p-value of Conditional LM test for Entity Random ffects: {cond_entity_p}\")\n"
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1354,14 +1354,14 @@
      "output_type": "stream",
      "text": [
       "Conditional LM Statistic for Time Random Effects: 0.021211458403447795\n",
-      "p-value of Conditional LM test for Time Random Effects: 0.11579562720183006\n"
+      "p-value of Conditional LM test for Time Random Effects: 0.8842043727981699\n"
      ]
     }
    ],
    "source": [
     "cond_time_stat = cond_LM_stat(pooled_ols_res, how= 'time')\n",
     "\n",
-    "cond_time_p = stats.chi2.cdf(cond_time_stat, 1)\n",
+    "cond_time_p = 1 - stats.chi2.cdf(cond_time_stat, 1)\n",
     "\n",
     "print(f\"Conditional LM Statistic for Time Random Effects: {cond_time_stat}\")\n",
     "print(f\"p-value of Conditional LM test for Time Random Effects: {cond_time_p}\")"
@@ -1376,26 +1376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'how' parameter should be either 'Entity' or 'Time' and not entity.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m marg_entity_stat \u001b[38;5;241m=\u001b[39m marg_LM_stat(pooled_ols_res, how\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentity\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m marg_entity_p \u001b[38;5;241m=\u001b[39m stats\u001b[38;5;241m.\u001b[39mchi2\u001b[38;5;241m.\u001b[39mcdf(marg_entity_stat, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMarginal LM Statistic for Entity Random Effects: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmarg_entity_stat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[12], line 30\u001b[0m, in \u001b[0;36mmarg_LM_stat\u001b[1;34m(restricted_model, how)\u001b[0m\n\u001b[0;32m     28\u001b[0m     T \u001b[38;5;241m=\u001b[39m restricted_model\u001b[38;5;241m.\u001b[39mentity_info\u001b[38;5;241m.\u001b[39mtotal\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhow\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m parameter should be either \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEntity\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m and not \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhow\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m J_n \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(shape \u001b[38;5;241m=\u001b[39m (n, n))\n\u001b[0;32m     33\u001b[0m J_T \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(shape \u001b[38;5;241m=\u001b[39m (T, T))\n",
-      "\u001b[1;31mValueError\u001b[0m: 'how' parameter should be either 'Entity' or 'Time' and not entity."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marginal LM Statistic for Entity Random Effects: 0.8279058383739034\n",
+      "p-value of Marginal LM test for Entity Random ffects: 0.36287877746040853\n"
      ]
     }
    ],
    "source": [
-    "marg_entity_stat = marg_LM_stat(pooled_ols_res, how= 'entity')\n",
+    "marg_entity_stat = marg_LM_stat(time_re_fit, how= 'entity')\n",
     "\n",
-    "marg_entity_p = stats.chi2.cdf(marg_entity_stat, 1)\n",
+    "marg_entity_p = 1 - stats.chi2.cdf(marg_entity_stat, 1)\n",
     "\n",
     "print(f\"Marginal LM Statistic for Entity Random Effects: {marg_entity_stat}\")\n",
     "print(f\"p-value of Marginal LM test for Entity Random ffects: {marg_entity_p}\")"
@@ -1403,10 +1399,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marginal LM Statistic for Time Random Effects: -0.8312802772875956\n",
+      "p-value of Marginal LM test for Time Random ffects: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "marg_time_stat = marg_LM_stat(entity_re_fit, how= 'time')\n",
+    "\n",
+    "marg_time_p = stats.chi2.cdf(marg_time_stat, 1)\n",
+    "\n",
+    "print(f\"Marginal LM Statistic for Time Random Effects: {marg_time_stat}\")\n",
+    "print(f\"p-value of Marginal LM test for Time Random ffects: {marg_time_p}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Joint LogLikelihood Test for Entity Random Effect"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def lr_test(restricted_model: PanelResults|RandomEffectsResults|PanelEffectsResults, unrestricted_model: PanelResults|RandomEffectsResults|PanelEffectsResults):\n",
+    "    try:\n",
+    "        res_loglik = restricted_model.loglik\n",
+    "    except:\n",
+    "        res_loglik = restricted_model.llf\n",
+    "\n",
+    "    try:\n",
+    "        unres_loglik = unrestricted_model.loglik\n",
+    "    except:\n",
+    "        unres_loglik = unrestricted_model.llf\n",
+    "\n",
+    "\n",
+    "    lr_stat = -2 * (res_loglik - unres_loglik)\n",
+    "    \n",
+    "    df = restricted_model.df_model - unrestricted_model.df_model\n",
+    "    lr_p = stats.chi2.cdf(lr_stat, df)\n",
+    "\n",
+    "    print(f\"Log-Likelihood Test Statistic: {lr_stat}\")\n",
+    "    print(f\"Log-Likelihood Test Statistic: {lr_p}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RegressionResults' object has no attribute 'loglik'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[59], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tw_re_fit\u001b[38;5;241m.\u001b[39mloglik\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\statsmodels\\base\\wrapper.py:34\u001b[0m, in \u001b[0;36mResultsWrapper.__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(results, attr)\n\u001b[0;32m     35\u001b[0m data \u001b[38;5;241m=\u001b[39m results\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m     36\u001b[0m how \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wrap_attrs\u001b[38;5;241m.\u001b[39mget(attr)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'RegressionResults' object has no attribute 'loglik'"
+     ]
+    }
+   ],
+   "source": [
+    "time_re_fit.df_model"
+   ]
   }
  ],
  "metadata": {
