Commit random effects analysis 1.3

--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -1272,7 +1272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Joint LM-Test for Entity Random Effect"
+    "#### Joint LM-Test"
    ]
   },
   {
@@ -1424,12 +1424,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Joint LogLikelihood Test for Entity Random Effect"
+    "#### Log-Likelihood Ratio Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,33 +1448,68 @@
     "    lr_stat = -2 * (res_loglik - unres_loglik)\n",
     "    \n",
     "    df = restricted_model.df_model - unrestricted_model.df_model\n",
-    "    lr_p = stats.chi2.cdf(lr_stat, df)\n",
+    "    lr_p = 1 - stats.chi2.cdf(lr_stat, df)\n",
     "\n",
     "    print(f\"Log-Likelihood Test Statistic: {lr_stat}\")\n",
     "    print(f\"Log-Likelihood Test Statistic: {lr_p}\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Joint LR Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'RegressionResults' object has no attribute 'loglik'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[59], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tw_re_fit\u001b[38;5;241m.\u001b[39mloglik\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\statsmodels\\base\\wrapper.py:34\u001b[0m, in \u001b[0;36mResultsWrapper.__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(results, attr)\n\u001b[0;32m     35\u001b[0m data \u001b[38;5;241m=\u001b[39m results\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m     36\u001b[0m how \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wrap_attrs\u001b[38;5;241m.\u001b[39mget(attr)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'RegressionResults' object has no attribute 'loglik'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log-Likelihood Test Statistic: 1692.3510468266113\n",
+      "Log-Likelihood Test Statistic: 0.0\n"
      ]
     }
    ],
    "source": [
-    "time_re_fit.df_model"
+    "lr_test(pooled_ols_res, tw_re_fit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conditional LR Test for Entity Random Effects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log-Likelihood Test Statistic: 1692.3510468266113\n",
+      "Log-Likelihood Test Statistic: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_test(time_re_fit, tw_re_fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
